<resources>
    <string name="app_name">StudyApp4iU</string>
    <string name="app_name_Menu">Study App 4 (i) U</string>
    <string name="version">V1.0</string>
    <string name="developedBy">Developed by: Philipp Pape</string>

    <!--Benennung der Menus in der MainActivity    -->
    <string name="buttonCourses">Courses</string>
    <string name="buttonLesson">Lessons</string>
    <string name="buttonTimer">Timer</string>
    <string name="buttonStatistic">Statistic</string>
    <string name="buttonArchive">Archive</string>
    <string name="buttonProfil">Userprofil</string>

    <!--Ausgabe der nicht implementierten Buttons in der MainActivity    -->
    <string name="buttonFunctionTemplates">Function not implemented</string>

    <!--Überschriften in den drei Hauptmenus    -->
    <string name="headlineCourses">Courses</string>
    <string name="headlineCoursesEdit">Courses Edit</string>
    <string name="headlineCoursesInfo">Courses Info</string>
    <string name="headlineCoursesAdd">Add Course</string>
    <string name="headlineLessons">Lessons</string>
    <string name="headlineLessonEdit">Lessons Edit</string>
    <string name="headlineLessonInfo">Lessons Info</string>
    <string name="headlineLessonAdd">Add Lesson</string>
    <string name="headlineTimer">Timer</string>


    <!--Text im Kursmenu    -->
    <string name="buttonAddCourse">+ Add course</string>
    <string name="buttonAddCourse2">Add course</string>
    <string name="buttonAddCourse3">+ Add course</string>
    <string name="buttonAddCourse4">Course added</string>

    <string name="buttonAddDummyCourses">+ Add Dummy courses</string>
    <string name="buttonAddDummyCourses2">Dummy course added</string>

    <string name="buttonDeleteCourse">Delete course</string>
    <string name="buttonDeletCourse2">Course deleted</string>
    <string name="buttonChangeCourse">save course</string>
    <string name="buttonChangeCourse2">Course saved</string>
    <string name="buttonCourse">Course </string>
    <string name="buttonNoSelectCourse">No page change possible please create course</string>
    <string name="buttonSortCourse">Sort Courses</string>

    <!--Fehlermeldungen -->
    <string name="errorCourseNo">"The course number must be between 1 and 2 characters long and may only consist of numbers."</string>
    <string name="errorCourseNameShort">"The short name of the course must be between 1 and 8 characters long."</string>
    <string name="errorCourseIubhId">"The IUBH ID of the course must not be empty and must not be longer than 8 characters."</string>
    <string name="errorCourseSem">"The specified semester must be at least 1 and may be a maximum of 2 characters long and consist only of numbers."</string>
    <string name="errorCourseNameLong">"The course description cannot be longer than 256 characters."</string>

    <!--Text im Kursmenu editieren und Info    -->
    <string name="textLineCourseNo">No.: </string>
    <string name="textLineNameShort">Name short: </string>
    <string name="textLineNameLong">Course Description: </string>
    <string name="textLineIubhId">IU ID: </string>
    <string name="textLineCourseSem">Planned semester: </string>


    <!--Text im Lerneinheitenmenu    -->
    <string name="buttonSelectCourse">Select course</string>
    <string name="requestSelectCourse">Please select course</string>
    <string name="buttonAddLessons">+ Add lesson</string>
    <string name="buttonAddLessons3">lesson added</string>
    <string name="buttonAddDummyLessons">+ Add Dummy lessons</string>
    <string name="buttonAddDummyLessons2">Dummy lesson added</string>
    <string name="buttonChangeLessons">Modify lesson</string>
    <string name="buttonChangeLessons2">Lesson saved</string>
    <string name="buttonDeletLessons">Delete lesson</string>
    <string name="buttonAddLessons2">Add lesson</string>
    <string name="buttonNoSelectLesson">No page change possible please create lesson</string>
    <string name="lessonTimeSet">Time set</string>
    <string name="lessonTimeNotSet">No time set</string>
    <!--Fehlermeldungen -->
    <string name="errorLessonNo">"The Lessons number must be between 1 and 2 characters long and may only consist of numbers."</string>
    <string name="errorLessonTitle">"The title of the the lesson must be between 8 and 81 characters long."</string>
    <string name="errorLessonTime">"The specified time must consist only of numbers."</string>
    <string name="errorCourseRelated">"The associated course information is incorrect."</string>

    <!--Text im Lerneinheiten editieren und Info    -->
    <string name="textLineLessonNo">No.: </string>
    <string name="textLineTitle">Title: </string>
    <string name="textLineRelatedCourse">Related course: </string>
    <string name="textLineTime">Time in sec.: </string>
    <string name="textLineTimeSet">Time Set: </string>

    <!--Text im Timermenu    -->
    <string name="buttonSelectLessons">Select lesson</string>
    <string name="requestSelectLessons">Please select lesson</string>
    <string name="buttonCreateLessons">Create lesson</string>
    <string name="buttonEndLessons">End lesson</string>
    <string name="buttonTimerStart">start</string>
    <string name="buttonTimerStop">pause</string>
    <string name="buttonTimerReset">reset</string>

</resources>