<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Lesson">

    <LinearLayout
        android:layout_width="398dp"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name_Menu"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/headlineCourses"
                android:layout_width="199dp"
                android:layout_height="wrap_content"
                android:text="@string/headlineLessons"
                android:textSize="24sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="134dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/iubhlogounterschrift" />
    </LinearLayout>


    <!--Kursübersicht-->
    <LinearLayout
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"></LinearLayout>

    <Button
        android:id="@+id/buttonselectCourse"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:backgroundTint="#00BCD4"
        android:fontFamily="monospace"
        android:onClick="onClickButtonSelectCourse"
        android:text="@string/buttonSelectCourse"
        android:textSize="23sp"        />




    <Button
        android:id="@+id/buttonAddCourse"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:backgroundTint="#00BCD4"
        android:fontFamily="monospace"
        android:onClick="onClickButtonAddCourse"
        android:text="@string/buttonAddCourse"
        android:textSize="23sp"        />



</LinearLayout>