<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CourseAdd">


    <LinearLayout
        android:layout_width="398dp"
        android:layout_height="72dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name_Menu"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/headlineCourses"
                android:layout_width="199dp"
                android:layout_height="wrap_content"
                android:text="@string/headlineCoursesAdd"
                android:textSize="24sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="134dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/iubhlogounterschrift" />
    </LinearLayout>


    <!--Kursübersicht-->

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="92dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textaddCours1"
            android:layout_width="208dp"
            android:layout_height="92dp"
            android:background="#009688"
            android:fontFamily="monospace"
            android:text="@string/textLineCourseNo"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="23sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addCourse1"
            android:layout_width="208dp"
            android:layout_height="92dp"
            android:background="#009688"
            android:fontFamily="monospace"
            android:inputType="numberDecimal"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="23sp" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:text="" />

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="92dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textaddCours2"
            android:layout_width="208dp"
            android:layout_height="92dp"
            android:background="#009688"
            android:textColor="@color/white"
            android:fontFamily="monospace"
            android:text="@string/textLineNameShort"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="23sp"    />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addCourse2"
            android:layout_width="208dp"
            android:layout_height="92dp"
            android:background="#009688"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="23sp" />
    </LinearLayout>
    <Space
        android:layout_width="411dp"
        android:layout_height="10dp"
        android:text="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textaddCours3"
                android:layout_width="208dp"
                android:layout_height="92dp"
                android:background="#009688"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/textLineIubhId"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addCourse3"
            android:layout_width="208dp"
            android:layout_height="92dp"
            android:background="#009688"
            android:textColor="@color/white"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text=""
            android:textAlignment="center"
            android:textSize="23sp"
            />

        </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:text="" />

    <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="92dp"
                android:orientation="horizontal">
        <TextView
            android:id="@+id/textaddCours4"
            android:layout_width="208dp"
            android:layout_height="92dp"
            android:background="#009688"
            android:textColor="@color/white"
            android:fontFamily="monospace"
            android:text="@string/textLineCourseSem"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="23sp"    />

        <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/addCourse4"
        android:layout_width="208dp"
        android:layout_height="92dp"
        android:background="#009688"
        android:textColor="@color/white"
        android:fontFamily="monospace"
        android:text=""
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="23sp"
        android:inputType="numberDecimal"
            />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textaddCours5"
            android:layout_width="208dp"
            android:layout_height="92dp"
            android:background="#009688"
            android:textColor="@color/white"
            android:fontFamily="monospace"
            android:text="@string/textLineNameLong"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="20sp"    />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addCourse5"
            android:layout_width="208dp"
            android:layout_height="92dp"
            android:background="#009688"
            android:textColor="@color/white"
            android:fontFamily="monospace"
            android:text=""
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="23sp"        />

    </LinearLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:text="" />


        <Button
            android:id="@+id/changeAddCourse"
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:backgroundTint="#FFCA28"
            android:fontFamily="monospace"
            android:onClick="onClickAddCourse"
            android:text="@string/buttonAddCourse2"
            android:textSize="23sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:text="" />

        <Button
            android:id="@+id/changeAddTemp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:backgroundTint="#43FFD028"
            android:fontFamily="monospace"
            android:onClick="onClickAddCourseDummy"
            android:text="@string/buttonAddDummyCourses"
            android:textColor="@color/black"
            android:textSize="13sp" />


</LinearLayout>