<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LessonAdd">


    <LinearLayout
        android:layout_width="398dp"
        android:layout_height="72dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name_Menu"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/headlineLesson"
                android:layout_width="199dp"
                android:layout_height="wrap_content"
                android:text="@string/headlineLessonAdd"
                android:textSize="17sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="134dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/iubhlogounterschrift" />
    </LinearLayout>


    <!--Kursübersicht-->

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="92dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textAddLesson1"
            android:layout_width="208dp"
            android:layout_height="92dp"
            android:background="#00BCD4"
            android:fontFamily="monospace"
            android:text="@string/textLineLessonNo"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="23sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addLesson1"
            android:layout_width="208dp"
            android:layout_height="92dp"
            android:background="#00BCD4"
            android:fontFamily="monospace"
            android:inputType="numberDecimal"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="23sp" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:text="" />

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="92dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textAddLesson2"
            android:layout_width="208dp"
            android:layout_height="92dp"
            android:background="#00BCD4"
            android:textColor="@color/white"
            android:fontFamily="monospace"
            android:text="@string/textLineTitle"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="23sp"    />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addLesson2"
            android:layout_width="208dp"
            android:layout_height="92dp"
            android:background="#00BCD4"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="23sp" />
    </LinearLayout>
    <Space
        android:layout_width="411dp"
        android:layout_height="10dp"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textAddLesson3"
            android:layout_width="208dp"
            android:layout_height="92dp"
            android:background="#00BCD4"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/textLineRelatedCourse"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addLesson3"
            android:layout_width="208dp"
            android:layout_height="92dp"
            android:background="#00BCD4"
            android:textColor="@color/white"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text=""
            android:textAlignment="center"
            android:textSize="23sp"
            />

    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textAddLesson4"
            android:layout_width="208dp"
            android:layout_height="92dp"
            android:background="#00BCD4"
            android:textColor="@color/white"
            android:fontFamily="monospace"
            android:text="@string/textLineTime"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="23sp"    />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addLesson4"
            android:layout_width="208dp"
            android:layout_height="92dp"
            android:background="#00BCD4"
            android:textColor="@color/white"
            android:fontFamily="monospace"
            android:text=""
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="23sp"
            android:inputType="numberDecimal"
            />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:orientation="horizontal">


    </LinearLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:text="" />


    <Button
        android:id="@+id/changeAddLesson"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:backgroundTint="#FFCA28"
        android:fontFamily="monospace"
        android:onClick="onClickAddLesson"
        android:text="@string/buttonChangeLessons"
        android:textSize="23sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:text="" />

    <Button
        android:id="@+id/changeAddTemp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:backgroundTint="#43FFD028"
        android:fontFamily="monospace"
        android:onClick="onClickAddLessonDummy"
        android:text="@string/buttonAddDummyLessons"
        android:textColor="@color/black"
        android:textSize="13sp" />


</LinearLayout>